# lmms-eval

./: .gitignore  .gitmodules  .pre-commit-config.yaml  0_metadata.json  1.txt  AGENTS.md  AZURE_TRAPI.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EASI_TESTING.md  EMU3_INTEGRATION.md  EVALUATION_RESULTS.md  LICENSE  MME-SCI-README_EN.md  OLLAMA_NEXT_STEPS.md  README.md  README_upstream.md  SECURITY.md  SKILL.md  UI_INTEGRATION_README.md  UNIWORLD_SETUP.md  UNIWORLD_USAGE.md  Untitled  __init__.py  auto_scoring.py  bug_report.md  captions_nocaps_val_alg_results.json  check_missing.py  check_reverse.py  claude.md  core.py  debug_xmod_bench_lite.slurm  deepspeed_zero3_2workers.yaml  demo.tape  download.sh  download_qwen3vl.py  download_uniworld.sh  (+48 more)
.claude-plugin/: marketplace.json
.github/: issue_template.md  labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  design_proposal.yml  feature_request.yml  new_benchmark.yml
.github/workflows/: black.yml  claude.yml  line-stats.yml  lint.yml  publish.yml  task-input-ab.yml  test.yml
.opencode/: opencode.db-shm  opencode.db-wal
M-MMMU/: README.md  generate_placeholder.py  translated_MMMU_val_300.json
additional_videommmu_experiment/: application_correct.json  application_gpt4o.json  application_llavavid.json  application_ov.json  before_correct.json  check_applicationincomprehension.py  check_correct.py  check_proportion.py  check_wrong2right.py  comprehension_correct.json  comprehension_gpt4o.json  comprehension_llavavid.json  eightframe_llavavid.json  enightframe_ov.json  image_gpt4o.json  perception_gpt4o.json  perception_llavavid.json  r2w_gpt4o.json  r2w_llavavid.json  real_application_llavavid.json  w2r_gpt4o.json  w2r_llavavid.json
blob/: config.yaml  install.sh  mount.sh
cicd/: README.md  run_evalcicd.sh
configs/: example_api.yaml  example_batch.yaml  example_local.yaml
dockerfile/: Dockerfile  README.md
docs/: README.md  caching.md  commands.md  current_tasks.md  external_usage.md  lmms-eval-0.3.md  lmms-eval-0.4.md  lmms-eval-0.5.md  lmms-eval-0.6.md  lmms-eval-0.7.md  lmms-eval-0.8.md  model_guide.md  new_benchmarks_smoke_report.md  new_task_guide.md  quickstart.md  run_examples.md  task_guide.md  throughput_metrics.md  unified_judge_async.md  unified_judge_interface.md
docs/advanced/: agent_design.md  agentic_game_loop_design.md  caching.md  current_tasks.md  external_usage.md  mmmu-eval-discrepancy.md  throughput_metrics.md
docs/getting-started/: commands.md
docs/guides/: model_benchmark_tags.md
docs/i18n/: README_ar.md  README_de.md  README_es.md  README_fr.md  README_hi.md  (+12 more)
examples/: 3_24_dev.md  extra_result.sh  install_task_deps.sh  test_bagel_jigsaw_visual_cot.sh  test_bagel_maze_multiGPU.sh  test_bagel_maze_optimized.sh  test_reasoning_tag_stripping.sh
g2u/: complete.sh  complete_cot.sh  complete_mio.sh  mio.sh  uniworld.sh  uniworld_cot.sh
lmm_eval/: __main__.py  evaluator.py  utils.py
lmms_eval/: __main__.py  api.py  constants.py  download_bagel.py  evaluator.py  evaluator_utils.py  imports.py  launch_server.py  logging_utils.py  occupy_gpu.py  protocol.py  utils.py
miscs/: llava_repr_requirements.txt  offline_405b_eval.py  offline_gpt4_eval.py  repr_scripts.sh  repr_torch_envs.txt  script.sh  test_llava.py  test_scienceqa.py  tinyllava_repr_requirements.txt  tinyllava_repr_scripts.sh  vllm_qwen2vl.sh
run_scripts/: template.sh
script/: README.md  eval_all.sh  eval_all_cot.sh
scripts/: test_qwen2_5_vl_video_metadata.sh
test/: README.md  __init__.py  conftest.py  requirements-test.txt  run_suite.py  test_api_components.py  test_chat_models.py  test_throughput_metrics.py  test_throughput_metrics_unit.py
tests/: test_response_cache.py
tools/: README.md  batch_watchdog.py  bench_minerva_pipeline_latency.py  bench_minerva_video_resolution.py  bench_video_decode_backends.py  get_split_zip.py  get_video_avg_time.py  get_video_avg_time_videoperception.py  make_audio_hf_dataset.ipynb  make_hf_dataset.ipynb  make_image_hf_dataset.ipynb  make_vatex.py  make_video_hf_dataset.ipynb  make_video_hf_dataset_from_json.py  makecvrr.ipynb  minerva_to_lance.py  regression.py  run_vllm_omni_vbvr_local.py  run_vllm_omni_vbvr_local_parallel.py  task_input_capture.py
tools/live_bench/: __init__.py  create_dataset.py  data_summary.ipynb  example.ipynb  filter.ipynb  pyproject.toml  refine_all_results.py  setup.py  summerize.ipynb
tools/live_bench/api/: live_bench.py
tools/live_bench/data_generator/: __init__.py  check_prompt.md  live_bench.py  live_bench_data.py  prompt.md  qa_generator.py  response.py  score_getter.py  score_prompt.md
tools/live_bench/data_generator/example/: example_output.json
tools/live_bench/data_generator/utils/: claude.py  gemini.py  gpt4v.py
tools/live_bench/driver/: .gitignore  __init__.py  load_driver.py
tools/live_bench/live_bench/: __init__.py  view.ipynb
tools/live_bench/live_bench/api/: live_bench.py
tools/live_bench/live_bench/data_generator/: __init__.py  check_prompt.md  default_criteria.md  live_bench.py  live_bench_data.py  prompt.md  qa_generator.py  question_finalizer.py  response.py  score_getter.py  score_prompt.md
tools/live_bench/live_bench/data_generator/example/: example_output.json
tools/live_bench/live_bench/data_generator/utils/: claude.py  extract_infomation.py  extract_information.py  gemini.py  gpt4v.py
tools/live_bench/live_bench/driver/: .gitignore  __init__.py  load_driver.py
tools/live_bench/live_bench/screen_shoter/: __init__.py  screen.py  screen_shoter.py
tools/live_bench/live_bench/websites/: __init__.py  load_website.py  website.py  website_list.yaml
tools/live_bench/screen_shoter/: __init__.py  screen.py  screen_shoter.py
tools/live_bench/script/: README.md  change.ipynb  compare.ipynb  modify.ipynb  refractor.py  select.ipynb  update_banchmark.ipynb  upload_results.py
tools/live_bench/websites/: __init__.py  load_website.py  website_list.yaml
utils/: cal_avg_length.py  download_vatex.py  upload_data.py  upload_to_hf.py
(+4019 files in other folders)
